# LeaderTeamAIbot

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
company/: admin.py  apps.py  models.py
company/managers/: calendar_events_manager.py
config/: __init__.py  asgi.py  openai_settings.py  production_settings.py  settings.py  urls.py  wsgi.py
config/celery/: config.py  handlers.py  tasks.py  utils.py
core/: admin.py
core/models/: __init__.py  assistant_settings_model.py  base_model.py  feedbacks_model.py
core/utils/: i18n.py  pdf.py
docker/: docker-compose-dev.yml  docker-compose.yml  down-dev.sh  up-dev.sh
env/: .env.default
fixtures/: 010_groups.json  020_users.json  030_assistant_settings.json
psychological_testing/: admin.py  apps.py  models.py
telegram_bot/: LeaderTeamAIbot.service  __init__.py  admin.py  apps.py  config.py  loader.py  logger_config.py  main.py  models.py
telegram_bot/buttons_and_messages/: base_classes.py  before_greeting_script.py  calendar_menu.py  company_menu.py  contacts_buttons.py  greeting_script.py  main_menu.py  openai_menu.py  personal_cabinet.py  seven_petals_script.py
telegram_bot/handlers/: admins_handlers.py  handlers.py
telegram_bot/managers/: admins_manager.py  answer_logic_manager.py  async_db_manager.py  openai_manager.py  reload_dump_manager.py  requests_manager.py  security_manager.py
telegram_bot/middlewares/: __init__.py  middlewares.py
telegram_bot/utils/: admins_send_message.py  exception_control.py  generate_graph.py  (+3 more)
users/: admin.py  apps.py  manager.py  models.py
utils/: misc.py  subprocess.py  time_utils.py  utils.py
(+3 files in other folders)
